Actions
Bug #12888
closedmdb: error: variable set but not used
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC:
../../../sparc/kmdb/kaif_activate.c: In function 'kaif_format_word': ../../../sparc/kmdb/kaif_activate.c:85:6: error: variable 'len' set but not used [-Werror=unused-but-set-variable] int len; ^~~ ../../../../../uts/sun4v/promif/promif_io.c: In function 'promif_write': ../../../../../uts/sun4v/promif/promif_io.c:220:9: error: variable 'fd' set but not used [-Werror=unused-but-set-variable] uint_t fd; ^~ ../../../../../uts/sun4v/promif/promif_io.c: In function 'promif_read': ../../../../../uts/sun4v/promif/promif_io.c:246:9: error: variable 'fd' set but not used [-Werror=unused-but-set-variable] uint_t fd; ^~
Testing done: build/install/boot
Updated by Toomas Soome almost 2 years ago
- Description updated (diff)
- Gerrit CR set to 748
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
git commit 415535b1f3a5b13ac8fe4938b44c5f5688f82237
commit 415535b1f3a5b13ac8fe4938b44c5f5688f82237 Author: Toomas Soome <tsoome@me.com> Date: 2020-07-10T10:27:25.000Z 12888 mdb: error: variable set but not used Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>
Actions