12888 mdb: error: variable set but not used Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Hans Rosenfeld <rosenfeld@grumpf.hope-2000.org>